2007-08-07  George Giolfan  <georgegiolfan@yahoo.com>

	* GridSplitter.cs: Added theme loading and cursor logic.

2007-08-06  George Giolfan  <georgegiolfan@yahoo.com>

	* GridSplitter.cs: Finished stubbing.

2007-08-06  George Giolfan  <georgegiolfan@yahoo.com>

	* GridSplitter.cs: Added.

2007-08-03  George Giolfan  <georgegiolfan@yahoo.com>

	* UserControl.cs: Implemented(?).

2007-08-03  George Giolfan  <georgegiolfan@yahoo.com>

	* BorderGapMaskConverter.cs: Implemented.

2007-08-03  George Giolfan  <georgegiolfan@yahoo.com>

	* BorderGapMaskConverter.cs: Added.

2007-08-02  George Giolfan  <georgegiolfan@yahoo.com>

	* Decorator.cs: Implemented IAddChild members and fixed Child.

2007-08-02  George Giolfan  <georgegiolfan@yahoo.com>

	* Decorator.cs: Added.
	
2007-08-02  George Giolfan  <georgegiolfan@yahoo.com>

	* Slider.cs: Switched to implemented *EventArgs types.

2007-08-01  George Giolfan  <georgegiolfan@yahoo.com>

	* ContentControl.cs: Added.

2007-07-30  George Giolfan  <georgegiolfan@yahoo.com>

	* ViewBox.cs: Fixed StretchDirection handling.

2007-07-30  George Giolfan  <georgegiolfan@yahoo.com>

	* ViewBox.cs: Some more fixes.

2007-07-29  George Giolfan  <georgegiolfan@yahoo.com>

	* ViewBox.cs: Some layout fixes.

2007-07-29  George Giolfan  <georgegiolfan@yahoo.com>

	* ViewBox.cs: Fixed MeasureOverride.

2007-07-29  George Giolfan  <georgegiolfan@yahoo.com>

	* ViewBox.cs: More work.

2007-07-28  George Giolfan  <georgegiolfan@yahoo.com>

	* ViewBox.cs: Implemented VisualChildrenCount.

2007-07-28  George Giolfan  <georgegiolfan@yahoo.com>

	* ViewBox.cs: Added.

2007-07-28  George Giolfan  <georgegiolfan@yahoo.com>

	* HeaderedContentControl.cs: Added.

2007-07-28  George Giolfan  <georgegiolfan@yahoo.com>
